--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -17,15 +17,15 @@ stages:
         steps: 
         - task: Maven@4
           inputs:
-           mavenPomFile: 'pom.xml'
-           goals: 'install'
-           publishJUnitResults: true
-           testResultsFiles: '**/surefire-reports/TEST-*.xml'
-           javaHomeOption: 'JDKVersion'
-           mavenVersionOption: 'Default'
-           mavenAuthenticateFeed: false
-           effectivePomSkip: false
-           sonarQubeRunAnalysis: false
+            mavenPomFile: 'pom.xml'
+            goals: 'install -DskipTests=true'
+            publishJUnitResults: true
+            testResultsFiles: '**/surefire-reports/TEST-*.xml'
+            javaHomeOption: 'JDKVersion'
+            mavenVersionOption: 'Default'
+            mavenAuthenticateFeed: false
+            effectivePomSkip: false
+            sonarQubeRunAnalysis: false
 
         - task: CopyFiles@2
           inputs:
